Diseñando el navbar  para version movil

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Iniciando mi WebSite</h1>
+    <header>
+        <nav class="nav">
+
+            <input type="checkbox" id="menu">
+            <label for="menu"> ☰ </label>
+            <img class="logo" src="https://lh3.googleusercontent.com/proxy/agYNWyq_MvepTLt9u1b3Z4GnrmOf93Lw3Shb8rTWxMCoRpm5lHwqUf7_mDN2skbxu-8xsltf9gTdVqsucq7LPWi8FnILVlbITL7ko_zkh_1JSnMfmIJSmMxYOPYRInFaF0L4gVQQfG44" alt="">
+
+            <ul>
+                <li>Incio</li>
+                <li>Estudio</li>
+                <li>Experiencia</li>
+                <li>Contactanos</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
